@@ -1,3 +1,10 @@
+2011-05-09  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * plugins/splitwindow.c:
+   Remove widget reparenting in Split Window plugin. This fixes plugin
+   issues on Windows (patch by Matthew Brush, thanks - closes #2725342).
+
+
 2011-05-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/callbacks.c:
